@@ -13,12 +13,11 @@ javaOptions in Universal ++= Seq(
   "-J-XX:MaxRAMFraction=2",
   "-J-XX:InitialRAMFraction=2",
   "-J-XX:MaxMetaspaceSize=300m",
-  "-J-XX:+PrintGCDetails",
-  "-J-XX:+PrintGCDateStamps",
   "-J-DpackerHome=/opt/packer",
   "-J-Dlogger.resource=logback-PROD.xml",
   s"-J-Dlogs.home=/var/log/${packageName.value}",
-  s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
+  "-J-Xlog:gc*",
+  s"-J-Xlog:gc:/var/log/${packageName.value}/gc.log"
 )
 
 lazy val root = (project in file("."))
